@@ -46,7 +46,8 @@ EXAMPLES
               /etc/sysconfig/ifconfig.eth0:2
 
                 ONBOOT=no
-                IFACE=eth0:2
+                IFACE=eth0
+                LABEL=eth0:2
                 SERVICE=dhcpcd
          
                 DHCP_START="--waitip"
@@ -122,6 +123,11 @@ NOTES
                      number of the interface.  The default, if not
                      specified, is 24.
        
+         LABEL     - The label to be assigned to the interface.  
+                     This is normally specified for assigning
+                     additional IP addresses to a network
+                     device.  Example: eth0:2 (optional)
+       
          BROADCAST - The brodcast address for this interface, 
                      e.g 192.168.1.255.  If not specified, 
                      the broadcast address will be calculated
@@ -176,4 +182,4 @@ AUTHORS
 SEE ALSO
        ip(8).
 
-IFUP/IFDOWN                   8 April 2012                 ifup(8)
+IFUP/IFDOWN                   8 February 2015                    ifup(8)
