@@ -1,3 +1,7 @@
+2015-02-08 Bruce Dubbs <bdubbs@linuxfromscratch.org>
+   * Modify ipv4-static to support ethernet labels
+   * Output a newline if an interface is skipped during boot
+
 2014-12-24 Bruce Dubbs <bdubbs@linuxfromscratch.org>
    * Clarify rationale for sysklog run levels
 
